[tool.poetry]
name = "city-metrics"
version = "0.1.0"
description = "Automated metric retrieval and calculation"
authors = ["Robb Shecter <robb@public.law>"]

[tool.poetry.dependencies]
python = "^3.7"
selenium = "~3.141.0"

[tool.poetry.dev-dependencies]
ipython = "*"
mypy    = "*"
pylint  = "*"
pytest  = "^3.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
